# shlokas-backend

./: .gitignore  migrate_all_data.sh  pyproject.toml  readme.md  render.yaml  requirements.txt
app/: cokie.json  database.py  deps.py  main.py
app/audio/: tts.py
app/embeddings/: embedder.py
app/llm/: llm_provider.py  translator.py
app/models/: analytics.py  audio.py  bookmark.py  chalisa.py  embedding.py  history.py  puja_vidhi.py  text.py  text_stats.py  topic.py  translation.py  user.py
app/routes/: analytics.py  audio.py  auth.py  bookmarks.py  chalisas.py  chat.py  devotion.py  history.py  puja_vidhi.py  recommendations.py  search.py  share.py  stats.py  texts.py  topics.py  translation.py  users.py  verse_of_day.py
app/scripts/: batch_audio.py  batch_translate.py  build_embeddings.py  build_topics.py  create_tables.py  fetch_dharmicdata.py  fetch_github_repo.py  generate_audio.py  generate_translations.py  gretil_ingest.py  ingest_bhagavata_purana.py  ingest_chalisas.py  ingest_dharmicdata.py  ingest_from_json.py  ingest_gita.py  ingest_gita_translations.py  ingest_gita_translations_api.py  ingest_gretil_batch.py  ingest_puja_vidhi.py  ingest_puranas.py  ingest_ramayana.py  ingest_ramcharitmanas.py  ingest_shiva_purana_gretil.py  ingest_upanishads.py  ingest_utils.py  ingest_vedas.py  ingest_vishnu_purana_gretil.py  migrate_audio_metadata_with_mapping.py  migrate_audio_to_r2.py  migrate_local_texts_to_neon.py  migrate_local_translations_to_neon.py  migrate_texts_schema.py  migrate_user_profile.py  seed_all.py  seed_extras.py  update_puja_vidhi_full.py  (+3 more)
(+77 files in other folders)
